--- a/package.json
+++ b/package.json
@@ -1,47 +1,41 @@
 {
   "name": "wp-reactivate",
-  "version": "1.0.2",
+  "version": "0.0.1",
   "description": "React boilerplate for WordPress plugins",
   "main": "index.js",
+  "license": "GPL-3.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress --colors --watch --mode=development",
-    "prod": "webpack --progress --colors -p --config webpack.config.js --mode=production"
+    "start": "webpack --watch --progress --colors --config webpack.config.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gopangolin/wp-reactivate.git"
+    "url": "https://github.com/kennalmartin/wp-reactivate"
   },
-  "keywords": [
-    "wordpress",
-    "react",
-    "plugin",
-    "webpack"
-  ],
-  "author": "Pangolin",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/gopangolin/wp-reactivate/issues"
-  },
-  "homepage": "https://github.com/gopangolin/wp-reactivate#readme",
+  "author": "Kenna Martin",
+  "homepage": "",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "isomorphic-fetch": "^2.2.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "classnames": "^2.2.5",
+    "create-react-class": "15.6.0",
+    "npm": "^6.0.1",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
+    "react-hot-loader": "3.0.0-beta.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "eslint": "^5.6.1",
-    "eslint-plugin-import": "^2.14.0",
+    "css-loader": "^2.1.1",
+    "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.11.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dashboard": "^2.0.0",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-notifier": "^1.7.0"
   }
 }
